HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/GenericPathMissingArguments/Expected.uv
//! Expected diagnostic metadata for the GenericPathMissingArguments rejected-source specimen.

expectedDiagnostic("E-TYP-2303", "rule.14.WF-Path-Generic-Err")
